Decouple publish and test workflows + enhance macOS debugging
- Add standalone test-pypi-release.yml for independent testing
- Remove testing from main publish workflow
- Add PyPI availability retry logic with configurable timeout
- Enhanced concurrent database test with detailed error tracking
- Proper imports moved to top of test file
- Will help diagnose macOS threading issues

--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -126,139 +126,21 @@ jobs:
         echo "Package published to PyPI"
         echo "Version: ${{ needs.create-release.outputs.version_number }}"
 
-  test-published-package:
-    name: Test Published Package
+  notify-success:
+    name: Notify Successful Release
     needs: [create-release, publish-pypi]
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: true  # Stop all tests if one fails
-      matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ['3.8', '3.10', '3.12']
-    steps:
-    - uses: actions/checkout@v3
-      with:
-        sparse-checkout: |
-          tests
-          pyproject.toml
-          
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ matrix.python-version }}
-        
-    - name: Wait for PyPI availability
-      run: |
-        echo "Waiting 180 seconds for PyPI to update..."
-        sleep 180
-        
-    - name: Install published package
-      run: |
-        python -m pip install --upgrade pip
-        pip install uk-postcodes-parsing==${{ needs.create-release.outputs.version_number }}
-        pip install pytest pandas
-        
-    - name: Run tests
-      run: |
-        pytest tests/ -v --tb=short
-        
-    - name: Test import and basic functionality
-      run: |
-        python -c "
-        import uk_postcodes_parsing as ukp
-        print(f'Version: {ukp.__version__}')
-        
-        # Verify version matches
-        expected_version = '${{ needs.create-release.outputs.version_number }}'
-        assert ukp.__version__ == expected_version, f'Version mismatch: {ukp.__version__} != {expected_version}'
-        
-        # Test database setup
-        success = ukp.setup_database()
-        assert success, 'Database setup failed'
-        
-        # Test basic lookup
-        result = ukp.lookup_postcode('SW1A 1AA')
-        assert result is not None, 'Lookup failed for SW1A 1AA'
-        assert result.district == 'Westminster', f'Expected Westminster, got {result.district}'
-        
-        print('✓ All basic functionality tests passed')
-        "
-
-  rollback-on-failure:
-    name: Rollback Release on Test Failure
-    needs: [create-release, publish-pypi, test-published-package]
-    if: failure()
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-      with:
-        sparse-checkout: |
-          pyproject.toml
-          
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.x'
-        
-    - name: Install twine
+    - name: Success notification
       run: |
-        python -m pip install --upgrade pip
-        pip install twine
-        
-    - name: Log yank instructions
-      run: |
-        VERSION="${{ needs.create-release.outputs.version_number }}"
-        echo "⚠️ Manual action required: Yank version $VERSION from PyPI"
-        echo "Run: pip install twine && twine yank uk-postcodes-parsing==$VERSION --reason 'Automated rollback: Post-release tests failed'"
-        
-    - name: Delete GitHub Release
-      uses: actions/github-script@v6
-      with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        script: |
-          console.log('Deleting failed release...');
-          try {
-            await github.rest.repos.deleteRelease({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              release_id: '${{ needs.create-release.outputs.release_id }}'
-            });
-            console.log('✓ Release deleted successfully');
-          } catch (error) {
-            console.error('Failed to delete release:', error.message);
-            core.setFailed(`Failed to delete release: ${error.message}`);
-          }
-          
-    - name: Create failure issue
-      uses: actions/github-script@v6
-      with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        script: |
-          const version = '${{ needs.create-release.outputs.version }}';
-          const runUrl = `${context.serverUrl}/${context.repo.owner}/${context.repo.repo}/actions/runs/${context.runId}`;
-          
-          await github.rest.issues.create({
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            title: `🚨 Release ${version} rolled back - tests failed`,
-            body: `## Release Rollback Notice\n\n` +
-                  `The release ${version} has been automatically rolled back due to test failures.\n\n` +
-                  `### Actions Taken:\n` +
-                  `- ⚠️ **MANUAL ACTION REQUIRED**: Yank version from PyPI\n` +
-                  `- ✅ Deleted GitHub release\n` +
-                  `- ✅ Created this issue for tracking\n\n` +
-                  `### Manual Steps Required:\n` +
-                  `\`\`\`bash\n` +
-                  `pip install twine\n` +
-                  `twine yank uk-postcodes-parsing==${version.slice(1)} --reason "Automated rollback: Post-release tests failed"\n` +
-                  `\`\`\`\n\n` +
-                  `### Next Steps:\n` +
-                  `1. Review the [failed workflow run](${runUrl})\n` +
-                  `2. Fix the failing tests\n` +
-                  `3. Bump version and try again\n\n` +
-                  `### Failed Tests:\n` +
-                  `Check the workflow run for details on which tests failed.`,
-            labels: ['bug', 'release-failure', 'high-priority']
-          });
-          
-          console.log('✓ Issue created for release rollback');
+        VERSION="${{ needs.create-release.outputs.version }}"
+        VERSION_NUMBER="${{ needs.create-release.outputs.version_number }}"
+        echo "✅ Release $VERSION published successfully!"
+        echo ""
+        echo "📦 PyPI: https://pypi.org/project/uk-postcodes-parsing/$VERSION_NUMBER/"
+        echo "🏷️ GitHub: https://github.com/${{ github.repository }}/releases/tag/$VERSION"
+        echo ""
+        echo "🧪 To test the release, run the 'Test PyPI Release' workflow manually:"
+        echo "gh workflow run 'Test PyPI Release' --field version=$VERSION_NUMBER"
+        echo ""
+        echo "⏰ Note: PyPI may take a few minutes to propagate the new version globally."
