--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -87,7 +87,7 @@ jobs:
           ### Changes
           - See [CHANGELOG.md](https://github.com/${{ github.repository }}/blob/main/CHANGELOG.md) for details
         draft: false
-        prerelease: false
+        prerelease: ${{ contains(steps.get_version.outputs.VERSION, 'a') || contains(steps.get_version.outputs.VERSION, 'b') || contains(steps.get_version.outputs.VERSION, 'rc') }}
 
     - name: Upload Compressed Database to Release
       uses: actions/upload-release-asset@v1
