--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,7 +16,7 @@ repos:
       entry: pytest
       language: system
       pass_filenames: false
-      always_run: true
+      files: ^(tests/|src/)
 - repo: https://github.com/PyCQA/bandit
   rev: 1.7.5
   hooks:
