--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -63,7 +63,7 @@ USER apiuser
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
-    CMD python -c "import requests; requests.get('http://localhost:8000/health')" || exit 1
+    CMD python -c "import urllib.request; urllib.request.urlopen('http://localhost:8000/health', timeout=3)" || exit 1
 
 # Expose port
 EXPOSE 8000
